--- a/src/components/css-comp/search.css
+++ b/src/components/css-comp/search.css
@@ -9,9 +9,9 @@
 }
 .search-content {
     margin-top: 80px;
-    padding: 50px;
-    width: 1400px;
-    height: 200px;
+    padding: 0px;
+    width: 70%;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,7 +26,7 @@
     background-color: #7d3eda;
     height: 80%;
     width: 25%;
-    font-size: 40px;
+    font-size: 5vw;
     border-right:#6a35b9 2px solid;
     text-align: center;
 }
@@ -57,5 +57,5 @@
     justify-content: center;
     min-width: 50%;
     height: 80%;
-    font-size: 40px;
+    font-size: 5vw;
 }
